# fram

./: .env.example  .gitignore  README.md  SPATIAL_AI_RESEARCH_SUMMARY.md  pyproject.toml  test.ipynb
mesa_conversion_from_netlogo_w_outputs/: requirements.txt
mesa_conversion_from_netlogo_w_outputs/mesa_southwark/: agents.py  data_loader.py  environment.py
mesa_southwark/: __init__.py  config.py  data_loader.py  mesa_compat.py  metrics.py  model.py  run.py  web.py
netlogo_env/: CLAUDE_southwark_test.md  southwark_environment.nlogo
reference_data/: southwark_reference_data_table.csv  southwark_reference_data_table.parquet.gzip
scenarios/: baseline.yaml  event_congestion.yaml  fire_evacuation.yaml  flood_response.yaml  traffic_flow.yaml
sim/: model.py  web.py
swarm/: __init__.py  __main__.py  cli.py  config.py
swarm/agents/: __init__.py  base.py  llm_agent.py  llm_swarm.py  perception.py  personality.py  swarm.py
swarm/agents/decisions/: __init__.py  reactive.py  strategic.py  tactical.py
swarm/analytics/: __init__.py  heatmap.py  metrics.py  recorder.py
swarm/core/: clock.py  engine.py  events.py  world.py
swarm/llm/: __init__.py  client.py  parser.py  prompt.py
swarm/llm/.ipynb_checkpoints/: client-checkpoint.py
swarm/scenarios/: __init__.py  loader.py
swarm/shared/: __init__.py  blackboard.py  fields.py  pheromones.py
swarm/viz/: renderer.py
