[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-sim"
version = "0.1.0"
description = "Spatial Waypoint Agent Routing Machine — pixel-granularity multi-agent spatial simulation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SWARM Team"},
]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pygame>=2.5",
    "rich>=13.0",
    "click>=8.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.20",
]
ml = [
    "torch>=2.1",
]

[project.scripts]
swarm = "swarm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarm*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
swarm-sim = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
ml = { features = ["ml"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.4.2,<3"
pyyaml = ">=6.0.3,<7"
scipy = ">=1.17.1,<2"
matplotlib = ">=3.10.8,<4"
pygame = ">=2.6.1,<3"
rich = ">=14.3.3,<15"
click = ">=8.3.1,<9"
pydantic = ">=2.12.5,<3"
pillow = ">=12.1.1,<13"
flask = ">=3.1.3,<4"
mesa = ">=3.3.1,<4"
pytest = ">=9.0.2,<10"
openai = ">=2.24.0,<3"
ipykernel = ">=7.2.0,<8"
jupyter = ">=1.1.1,<2"
jupyterlab = ">=4.5.5,<5"
python-dotenv = ">=1.2.1,<2"
yaml = ">=0.2.5,<0.3"
